Fix the left alignment of the header text

--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,22 @@ body {
     padding: 0;
     height: 100vh;
     width: 100%;
-    font-family: "Times New Roman", Times, serif;
-    letter-spacing: 0.2rem;
     background-color: #d7d9d3;
     color: #162521;
-  }
+}
 
 header {
     width: 100%;
+    text-align: left;
+    padding: 20px 0;
+}
+
+/* Elements */
+.title {
+    font-family: "Times New Roman", Times, serif;
+    letter-spacing: 0.2rem;
     background-color: #162521;
     color: #e2c044;
     font-size: 2.5em;
-    text-align: left;
-    padding: 20px 0;
-    display: flex;
-    justify-content: left;
-    align-items: left;
-  }
+    margin-left: 20px;
+}
